Fix layout issues on different devices (upcoming events)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,6 +197,11 @@ header h1 {
     background: white;
 }
 
+.col-sm {
+    width: 24.4%;
+    margin: 3px;
+}
+
 .event-item>h6 {
     text-align: center;
     letter-spacing: 2px;
@@ -212,11 +217,6 @@ header h1 {
 
 .event-desc {
     font-size: small;
-}
-
-.col-lg-3 {
-    width: 24%;
-    margin: 6px
 }
 
 #footer {
@@ -272,20 +272,16 @@ header h1 {
         display: contents;
     }
 
-    .event-item {
-        margin: 0 3px;
-        max-width: 32%;
-    }
-
     #event-4 {
         visibility: collapse;
+        display: none;
     }
 
-    .col-md-4 {
-        width: 32.2%;
-        margin: 4.5px;
+    .col-sm {
+        width: 32.8%;
+        max-width: 33.3333%;
+        margin: 3.5px;
     }
-
     /* End of Tablet */
 }
 
@@ -326,8 +322,9 @@ header h1 {
         display: none;
     }
 
-    .col-sm-4 {
-        max-width: fit-content;
+    .col-sm {
+        width: 98%;
+        max-width: 100%;
         margin: 5px 0;
     }
 
@@ -340,6 +337,7 @@ header h1 {
 
     #event-4 {
         visibility: visible;
+        display:inline-block;
     }
 
     #instructor-1,
